--- a/src/index.html
+++ b/src/index.html
@@ -144,6 +144,17 @@
   
       
     </div>
-    <script src="/src/index.js"></script>
+    <script>
+      const burger = document.querySelector("#burger");
+const menu = document.querySelector("#menu");
+
+burger.addEventListener("click", () => {
+  if (menu.classList.contains("hidden")) {
+    menu.classList.remove("hidden");
+  } else {
+    menu.classList.add("hidden");
+  }
+});
+    </script>
   </body>
 </html>
